fix: use uv run instead of python3

--- a/.github/workflows/version-and-changelog.yml
+++ b/.github/workflows/version-and-changelog.yml
@@ -151,7 +151,7 @@ jobs:
           EOF
 
           # Call OpenRouter API
-          python3 << 'PYSCRIPT'
+          uv run python3 << 'PYSCRIPT'
           import requests
           import os
 
