--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "learn-faster"
-version = "1.1.1"
+version = "1.2.0"
 description = "Learn FASTER: Accelerate learning with spaced repetition, active practice, and teaching-based retention"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -21,6 +21,7 @@ classifiers = [
 ]
 dependencies = [
     "inquirer>=3.1.0",
+    "reportlab>=4.0.0",
 ]
 
 [project.scripts]
